@@ -14,4 +14,6 @@
 
 * Command handler now supports one more folder registration
 
+* Fixed mute command not catching mentions as mute target (still incomplete)
+
 12/21/2019 (UTC+7)
